shared: migrate JSON/zip utilities and Translator to Jackson 3